# pathology-hooknet-tls

./: .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfileDIAG  README.md  pyproject.toml  setup.py
.github/scripts/: release.py
.github/workflows/: ci_tests.yml  docs.yml  publish.yml  pypi.yml  release.yml  tests.yml
hooknettls/: __main__.py  gc.py  io.py  postprocessing.py  preprocessing.ipynb  save_image_at_spacing.py.py
hooknettls/configs/: config.yml
preprocessing/: Dockerfile  createmask.py  run.sh  saveatlevel.py
